[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore",
]

exclude = [
    "zircon-user",
    "rboot",
]

[profile.release]
lto = true

[patch.'https://github.com/rcore-os/rcore-fs']
rcore-fs = { path = "../../ZCORE/rcore-fs/rcore-fs" }
rcore-fs-sfs = { path = "../../ZCORE/rcore-fs/rcore-fs-sfs" }
rcore-fs-ramfs = { path = "../../ZCORE/rcore-fs/rcore-fs-ramfs" }
rcore-fs-mountfs = { path = "../../ZCORE/rcore-fs/rcore-fs-mountfs" }
rcore-fs-devfs = { path = "../../ZCORE/rcore-fs/rcore-fs-devfs" }