[package]
name = "zcore"
version = "0.1.0"
authors = ["PanQL <panqinglin00@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graphic = []
board_qemu = ["kernel-hal-bare/board_qemu"]
grub = ["link_user_img"]
board_d1 = ["link_user_img", "kernel-hal-bare/board_d1"]
link_user_img = []
zircon = ["zircon-loader"]
linux = ["linux-loader", "linux-object", "rcore-fs-sfs"]
#hypervisor = ["rvm", "zircon", "zircon-object/hypervisor", "zircon-syscall/hypervisor"]

[profile.release]
lto = true

[dependencies]
log = "0.4"
spin = "0.9"
buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator.git", rev = "9c6e36ab" }
#buddy_system_allocator = { path = "/home/xly/rust/arch-lib/buddy_system_allocator" }
kernel-hal-bare = { path = "../kernel-hal-bare" }
lazy_static = { version = "1.4", features = ["spin_no_std" ] }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }
trapframe = "0.8.0"
executor = { git = "https://github.com/rcore-os/executor.git", rev = "a2d02ee9" }
zircon-loader = { path = "../zircon-loader", default-features = false, optional = true }
zircon-syscall = { path = "../zircon-syscall", optional = true }
zircon-object = { path = "../zircon-object" }
linux-loader = { path = "../linux-loader", default-features = false, optional = true }
linux-object = { path = "../linux-object", default-features = false, optional = true }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "6df6cd2", optional = true }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "6df6cd2" }
# FIX LATER
# rvm = { git = "https://github.com/rcore-os/RVM", rev = "382fc60", optional = true }
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", rev = "26fa79", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
rlibc-opt = { git = "https://github.com/rcore-os/rlibc-opt.git", rev = "fb1d4a9" }
rboot = { path = "../rboot", default-features = false }
bootloader = { git = "https://github.com/elliott10/bootloader", rev = "bcf8047", features = [ "recursive_page_table", "map_physical_memory" ] }
rvm = { git = "https://github.com/rcore-os/RVM", rev = "e91d625", optional = true }

# x86_64 boot via grub
[package.metadata.bootloader]
kernel-stack-address = "0xFFFFFF0100000000"
kernel-stack-size = 512
physical-memory-offset = "0xFFFF800000000000"

[target.'cfg(target_arch = "riscv64")'.dependencies]
rlibc = "1.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"], rev = "0074cbc" }
